# internal/model/review.go
@@ -1,0 +1,7 @@
+package model
+
+type Review struct {
+	ID int64 `json:"id"`
+	MovieID int64 `json:"movie_id"` 
+	Comment string `json:"comment"`
+}
